--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class=" col-xs-12 col-sm-offset-4 col-sm-12 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6">
           <div class="well calcontainer col-xs-12 col-sm-offset-4 col-sm-12 col-md-offset-3 col-md-6 col-lg-offset-3 col-lg-6">
-            <input class="form-control output" id="output" name="panel" placeholder="0" disabled><br/>
+            <input class="form-control display" id="display" name="panel" placeholder="0" disabled><br/>
 
             <button class="form-group btn btn-default bttn" name="bttn7" value="7">7</button>
             <button class="form-group btn btn-default bttn" name="bttn8" value="8">8</button>
@@ -34,7 +34,7 @@
             <button class="form-group btn btn-default bttn" name="bttn3" value="3">3</button>
             <button class="form-group btn btn-danger bttn" name="bttnmulti" value="x">x</button><br/>
 
-            <button class="form-group btn btn-default bttn" name="bttnc" value="C">C</button>
+            <button class="form-group btn btn-clear bttn" name="bttnc" value="C">C</button>
             <button class="form-group btn btn-default bttn" name="bttn0" value="0">0</button>
             <button class="form-group btn btn-info bttn" name="bttneq" value="=">=</button>
             <button class="form-group btn btn-danger bttn" name="bttndiv" value="/">/</button>
